[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Enemy/horror walk.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemy/horror attack.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Boss.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 100, 100 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 100, 100 )

[sub_resource type="RayShape2D" id=16]
length = 350.0

[node name="Enemy" type="Node2D"]

[node name="Boss" type="KinematicBody2D" parent="."]
position = Vector2( 1857.56, 290.106 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Boss"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Boss"]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 13 )
animation = "Walk"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2( 19.1339, -0.693069 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 14 )

[node name="Boss area" type="Area2D" parent="Boss"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Boss area"]
position = Vector2( 18.0588, -2.41595 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 15 )

[node name="Boss area2" type="Area2D" parent="Boss"]
position = Vector2( -10.068, 93.1289 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Boss area2"]
position = Vector2( -8.5127, -52.7864 )
rotation = 1.5708
shape = SubResource( 16 )
[connection signal="body_entered" from="Boss/Boss area" to="Boss" method="_on_Boss_area_body_entered"]
[connection signal="body_entered" from="Boss/Boss area2" to="Boss" method="_on_Boss_area2_body_entered"]
[connection signal="body_exited" from="Boss/Boss area2" to="Boss" method="_on_Boss_area2_body_exited"]
